--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+ <app-root>Loading...</app-root>
+ <script src="https://apis.google.com/js/platform.js"></script>
 </body>
 </html>
